# Starfish

./: .gitignore  CMakeLists.txt  README.md  sudo_gdb.sh  testdir_name.sh  tun.drawio  tun.sh
apps/: CMakeLists.txt  chargen.cc  chargen_short.cc  chargen_short_tun.cc  chargen_tun.cc  netcat.cc  webget.cc
apps/simple_http_server/: main.go
etc/: build_macro.cmake  flags.cmake  tests.cmake  tunconfig
img/: tun.drawio
lib/: CMakeLists.txt  byte_stream.cc  byte_stream.hh  stream_reassembler.cc  stream_reassembler.hh  tcp_connection.cc  tcp_connection.hh  tcp_receiver.cc  tcp_receiver.hh  tcp_sender.cc  tcp_sender.hh  wrapping_integers.cc  wrapping_integers.hh
lib/tcp_helpers/: ipv4_datagram.cc  ipv4_datagram.hh  ipv4_header.hh  tcp_config.hh  tcp_header.hh  tcp_segment.hh  tcp_sponge_socket.cc  tcp_sponge_socket.hh  tcp_state.hh  tcp_tun_socket.cc  tcp_tun_socket.hh  tun_adapter.cc  tun_adapter.hh
lib/util/: address.hh  buffer.cc  buffer.hh  eventloop.hh  file_descriptor.hh  parser.hh  socket.cc  socket.hh  tun.hh  util.hh
tests/: CMakeLists.txt  fd_adapter.cc  fd_adapter.hh  tcp_expectation.hh  tcp_fsm_test_harness.hh
